# deta_todo_service

./: .detaignore  .dockerignore  .env.example  .gitignore  Makefile  README.md  deta.json  docker-compose.yaml  pyproject.toml
.deta/: prog_info  state
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot_automerge.yml  deta_deploy.yml
app/: app.py  main.py  settings.py
app/ports/api/users/: resources.py  schemas.py
docker/: Dockerfile
docs/diagrams/: code-layers.puml
envs/: api.env  base.env  base.overrides.env
tests/: conftest.py
